src/main/parser/CiscoIOSParser.js
"use strict";
// Generated from ./CiscoIOS.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols
Object.defineProperty(exports, "__esModule", { value: true });
exports.Dhcp_bodyContext = exports.Dhcp_stmtContext = exports.Rip_bodyContext = exports.Rip_stmtContext = exports.Int_bodyContext = exports.Int_stmtContext = exports.Ospf_bodyContext = exports.Ospf_stmtContext = exports.Linevty_bodyContext = exports.Linevty_stmtContext = exports.Linecon_bodyContext = exports.Linecon_stmtContext = exports.Grundkonfig_stmtContext = exports.Global_stmtContext = exports.Conft_stmtContext = exports.Priv_stmtContext = exports.Enable_stmtContext = exports.Exec_stmtContext = exports.StatementContext = exports.LineContext = exports.ConfigContext = void 0;
const antlr4_1 = require("antlr4");
class CiscoIOSParser extends antlr4_1.Parser {
    static ENABLE = 1;
    static CONFT = 2;
    static ROUTER = 3;
    static OSPF = 4;
    static EXIT = 5;
    static NO = 6;
    static INTERFACE = 7;
    static INT_NAME = 8;
    static INT_NUM = 9;
    static HOSTNAME = 10;
    static BANNER = 11;
    static MOTD = 12;
    static DOMAIN = 13;
    static NAME = 14;
    static SSH = 15;
    static USERNAME = 16;
    static LINE = 17;
    static VTY = 18;
    static CON = 19;
    static LOGIN = 20;
    static LOCAL = 21;
    static LOGGING = 22;
    static SYNCHRONUS = 23;
    static EXEC_TIMEOUT = 24;
    static TRANSPORT = 25;
    static INPUT = 26;
    static TELNET = 27;
    static PASSIVE_INTERFACE = 28;
    static ROUTER_ID = 29;
    static DESCRIPTION = 30;
    static SHUT = 31;
    static ADDR = 32;
    static RIP = 33;
    static VERSION = 34;
    static AUTO_SUMMARY = 35;
    static DHCP = 36;
    static POOL = 37;
    static INT = 38;
    static IP_ADDR = 39;
    static SUB_ADDR = 40;
    static DOMAIN_NAME = 41;
    static NETWORK = 42;
    static IP = 43;
    static STR = 44;
    static BANNER_TEXT = 45;
    static NEWLINE = 46;
    static WS = 47;
    static ANY = 48;
    static EOF = antlr4_1.Token.EOF;
    static RULE_config = 0;
    static RULE_line = 1;
    static RULE_statement = 2;
    static RULE_exec_stmt = 3;
    static RULE_enable_stmt = 4;
    static RULE_priv_stmt = 5;
    static RULE_conft_stmt = 6;
    static RULE_global_stmt = 7;
    static RULE_grundkonfig_stmt = 8;
    static RULE_linecon_stmt = 9;
    static RULE_linecon_body = 10;
    static RULE_linevty_stmt = 11;
    static RULE_linevty_body = 12;
    static RULE_ospf_stmt = 13;
    static RULE_ospf_body = 14;
    static RULE_int_stmt = 15;
    static RULE_int_body = 16;
    static RULE_rip_stmt = 17;
    static RULE_rip_body = 18;
    static RULE_dhcp_stmt = 19;
    static RULE_dhcp_body = 20;
    static literalNames = [null, "'enable'",
        "'configure terminal'",
        "'router'",
        "'ospf'", "'exit'",
        "'no'", "'interface'",
        null, null,
        "'hostname'",
        "'banner'",
        "'motd'", "'domain'",
        "'name'", "'ssh'",
        "'username'",
        "'line'", "'vty'",
        "'con'", "'login'",
        "'local'", "'logging'",
        "'synchronous'",
        "'exec-timeout'",
        "'transport'",
        "'input'", "'telnet'",
        "'passive-interface'",
        "'router-id'",
        "'description'",
        "'shutdown'",
        "'address'",
        "'rip'", "'version'",
        "'auto-summary'",
        "'dhcp'", "'pool'",
        null, null,
        null, null,
        "'network'",
        "'ip'"];
    static symbolicNames = [null, "ENABLE",
        "CONFT", "ROUTER",
        "OSPF", "EXIT",
        "NO", "INTERFACE",
        "INT_NAME",
        "INT_NUM",
        "HOSTNAME",
        "BANNER", "MOTD",
        "DOMAIN", "NAME",
        "SSH", "USERNAME",
        "LINE", "VTY",
        "CON", "LOGIN",
        "LOCAL", "LOGGING",
        "SYNCHRONUS",
        "EXEC_TIMEOUT",
        "TRANSPORT",
        "INPUT", "TELNET",
        "PASSIVE_INTERFACE",
        "ROUTER_ID",
        "DESCRIPTION",
        "SHUT", "ADDR",
        "RIP", "VERSION",
        "AUTO_SUMMARY",
        "DHCP", "POOL",
        "INT", "IP_ADDR",
        "SUB_ADDR",
        "DOMAIN_NAME",
        "NETWORK",
        "IP", "STR",
        "BANNER_TEXT",
        "NEWLINE",
        "WS", "ANY"];
    // tslint:disable:no-trailing-whitespace
    static ruleNames = [
        "config", "line", "statement", "exec_stmt", "enable_stmt", "priv_stmt",
        "conft_stmt", "global_stmt", "grundkonfig_stmt", "linecon_stmt", "linecon_body",
        "linevty_stmt", "linevty_body", "ospf_stmt", "ospf_body", "int_stmt",
        "int_body", "rip_stmt", "rip_body", "dhcp_stmt", "dhcp_body",
    ];
    get grammarFileName() { return "CiscoIOS.g4"; }
    get literalNames() { return CiscoIOSParser.literalNames; }
    get symbolicNames() { return CiscoIOSParser.symbolicNames; }
    get ruleNames() { return CiscoIOSParser.ruleNames; }
    get serializedATN() { return CiscoIOSParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new antlr4_1.FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this._interp = new antlr4_1.ParserATNSimulator(this, CiscoIOSParser._ATN, CiscoIOSParser.DecisionsToDFA, new antlr4_1.PredictionContextCache());
    }
    // @RuleVersion(0)
    config() {
        let localctx = new ConfigContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, CiscoIOSParser.RULE_config);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 43;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    {
                        {
                            this.state = 42;
                            this.line();
                        }
                    }
                    this.state = 45;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 199918) !== 0) || _la === 43 || _la === 46);
                this.state = 47;
                this.match(CiscoIOSParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    line() {
        let localctx = new LineContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, CiscoIOSParser.RULE_line);
        try {
            this.state = 51;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case 46:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 49;
                        this.match(CiscoIOSParser.NEWLINE);
                    }
                    break;
                case 1:
                case 2:
                case 3:
                case 5:
                case 6:
                case 7:
                case 10:
                case 11:
                case 16:
                case 17:
                case 43:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 50;
                        this.statement();
                    }
                    break;
                default:
                    throw new antlr4_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    statement() {
        let localctx = new StatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, CiscoIOSParser.RULE_statement);
        try {
            this.state = 57;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 53;
                        this.exec_stmt();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 54;
                        this.priv_stmt();
                    }
                    break;
                case 3:
                case 6:
                case 7:
                case 10:
                case 11:
                case 16:
                case 17:
                case 43:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 55;
                        this.global_stmt();
                    }
                    break;
                case 5:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 56;
                        this.match(CiscoIOSParser.EXIT);
                    }
                    break;
                default:
                    throw new antlr4_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    exec_stmt() {
        let localctx = new Exec_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, CiscoIOSParser.RULE_exec_stmt);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 59;
                this.enable_stmt();
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    enable_stmt() {
        let localctx = new Enable_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, CiscoIOSParser.RULE_enable_stmt);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 61;
                this.match(CiscoIOSParser.ENABLE);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    priv_stmt() {
        let localctx = new Priv_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 10, CiscoIOSParser.RULE_priv_stmt);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 63;
                this.conft_stmt();
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    conft_stmt() {
        let localctx = new Conft_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 12, CiscoIOSParser.RULE_conft_stmt);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 65;
                this.match(CiscoIOSParser.CONFT);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    global_stmt() {
        let localctx = new Global_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 14, CiscoIOSParser.RULE_global_stmt);
        try {
            this.state = 74;
            this._errHandler.sync(this);
            switch (this._interp.adaptivePredict(this._input, 3, this._ctx)) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 67;
                        this.ospf_stmt();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 68;
                        this.int_stmt();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 69;
                        this.rip_stmt();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 70;
                        this.grundkonfig_stmt();
                    }
                    break;
                case 5:
                    this.enterOuterAlt(localctx, 5);
                    {
                        this.state = 71;
                        this.linecon_stmt();
                    }
                    break;
                case 6:
                    this.enterOuterAlt(localctx, 6);
                    {
                        this.state = 72;
                        this.linevty_stmt();
                    }
                    break;
                case 7:
                    this.enterOuterAlt(localctx, 7);
                    {
                        this.state = 73;
                        this.dhcp_stmt();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    grundkonfig_stmt() {
        let localctx = new Grundkonfig_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 16, CiscoIOSParser.RULE_grundkonfig_stmt);
        try {
            this.state = 95;
            this._errHandler.sync(this);
            switch (this._interp.adaptivePredict(this._input, 4, this._ctx)) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 76;
                        this.match(CiscoIOSParser.HOSTNAME);
                        this.state = 77;
                        this.match(CiscoIOSParser.STR);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 78;
                        this.match(CiscoIOSParser.BANNER);
                        this.state = 79;
                        this.match(CiscoIOSParser.MOTD);
                        this.state = 80;
                        this.match(CiscoIOSParser.BANNER_TEXT);
                    }
                    break;
                case 3:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 81;
                        this.match(CiscoIOSParser.USERNAME);
                        this.state = 82;
                        this.match(CiscoIOSParser.STR);
                    }
                    break;
                case 4:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 83;
                        this.match(CiscoIOSParser.IP);
                        this.state = 84;
                        this.match(CiscoIOSParser.DOMAIN);
                        this.state = 85;
                        this.match(CiscoIOSParser.NAME);
                        this.state = 86;
                        this.match(CiscoIOSParser.DOMAIN_NAME);
                    }
                    break;
                case 5:
                    this.enterOuterAlt(localctx, 5);
                    {
                        this.state = 87;
                        this.match(CiscoIOSParser.NO);
                        this.state = 88;
                        this.match(CiscoIOSParser.IP);
                        this.state = 89;
                        this.match(CiscoIOSParser.DOMAIN);
                        this.state = 90;
                        this.match(CiscoIOSParser.NAME);
                    }
                    break;
                case 6:
                    this.enterOuterAlt(localctx, 6);
                    {
                        this.state = 91;
                        this.match(CiscoIOSParser.IP);
                        this.state = 92;
                        this.match(CiscoIOSParser.SSH);
                        this.state = 93;
                        this.match(CiscoIOSParser.VERSION);
                        this.state = 94;
                        this.match(CiscoIOSParser.INT);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    linecon_stmt() {
        let localctx = new Linecon_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 18, CiscoIOSParser.RULE_linecon_stmt);
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 97;
                this.match(CiscoIOSParser.LINE);
                this.state = 98;
                this.match(CiscoIOSParser.CON);
                this.state = 99;
                this.match(CiscoIOSParser.INT);
                this.state = 103;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
                while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 100;
                                this.linecon_body();
                            }
                        }
                    }
                    this.state = 105;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
                }
                this.state = 107;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 6, this._ctx)) {
                    case 1:
                        {
                            this.state = 106;
                            this.match(CiscoIOSParser.EXIT);
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    linecon_body() {
        let localctx = new Linecon_bodyContext(this, this._ctx, this.state);
        this.enterRule(localctx, 20, CiscoIOSParser.RULE_linecon_body);
        try {
            this.state = 117;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case 46:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 109;
                        this.match(CiscoIOSParser.NEWLINE);
                    }
                    break;
                case 20:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 110;
                        this.match(CiscoIOSParser.LOGIN);
                        this.state = 111;
                        this.match(CiscoIOSParser.LOCAL);
                    }
                    break;
                case 22:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 112;
                        this.match(CiscoIOSParser.LOGGING);
                        this.state = 113;
                        this.match(CiscoIOSParser.SYNCHRONUS);
                    }
                    break;
                case 24:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 114;
                        this.match(CiscoIOSParser.EXEC_TIMEOUT);
                        this.state = 115;
                        this.match(CiscoIOSParser.INT);
                        this.state = 116;
                        this.match(CiscoIOSParser.INT);
                    }
                    break;
                default:
                    throw new antlr4_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    linevty_stmt() {
        let localctx = new Linevty_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 22, CiscoIOSParser.RULE_linevty_stmt);
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 119;
                this.match(CiscoIOSParser.LINE);
                this.state = 120;
                this.match(CiscoIOSParser.VTY);
                this.state = 121;
                this.match(CiscoIOSParser.INT);
                this.state = 122;
                this.match(CiscoIOSParser.INT);
                this.state = 126;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
                while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 123;
                                this.linevty_body();
                            }
                        }
                    }
                    this.state = 128;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
                }
                this.state = 130;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 9, this._ctx)) {
                    case 1:
                        {
                            this.state = 129;
                            this.match(CiscoIOSParser.EXIT);
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    linevty_body() {
        let localctx = new Linevty_bodyContext(this, this._ctx, this.state);
        this.enterRule(localctx, 24, CiscoIOSParser.RULE_linevty_body);
        try {
            this.state = 144;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case 46:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 132;
                        this.match(CiscoIOSParser.NEWLINE);
                    }
                    break;
                case 20:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 133;
                        this.match(CiscoIOSParser.LOGIN);
                        this.state = 134;
                        this.match(CiscoIOSParser.LOCAL);
                    }
                    break;
                case 22:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 135;
                        this.match(CiscoIOSParser.LOGGING);
                        this.state = 136;
                        this.match(CiscoIOSParser.SYNCHRONUS);
                    }
                    break;
                case 24:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 137;
                        this.match(CiscoIOSParser.EXEC_TIMEOUT);
                        this.state = 138;
                        this.match(CiscoIOSParser.INT);
                        this.state = 139;
                        this.match(CiscoIOSParser.INT);
                    }
                    break;
                case 25:
                    this.enterOuterAlt(localctx, 5);
                    {
                        this.state = 140;
                        this.match(CiscoIOSParser.TRANSPORT);
                        this.state = 141;
                        this.match(CiscoIOSParser.INPUT);
                        this.state = 142;
                        this.match(CiscoIOSParser.SSH);
                        this.state = 143;
                        this.match(CiscoIOSParser.TELNET);
                    }
                    break;
                default:
                    throw new antlr4_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    ospf_stmt() {
        let localctx = new Ospf_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 26, CiscoIOSParser.RULE_ospf_stmt);
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 146;
                this.match(CiscoIOSParser.ROUTER);
                this.state = 147;
                this.match(CiscoIOSParser.OSPF);
                this.state = 148;
                this.match(CiscoIOSParser.INT);
                this.state = 152;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
                while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 149;
                                this.ospf_body();
                            }
                        }
                    }
                    this.state = 154;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
                }
                this.state = 156;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 12, this._ctx)) {
                    case 1:
                        {
                            this.state = 155;
                            this.match(CiscoIOSParser.EXIT);
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    ospf_body() {
        let localctx = new Ospf_bodyContext(this, this._ctx, this.state);
        this.enterRule(localctx, 28, CiscoIOSParser.RULE_ospf_body);
        try {
            this.state = 167;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case 46:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 158;
                        this.match(CiscoIOSParser.NEWLINE);
                    }
                    break;
                case 42:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 159;
                        this.match(CiscoIOSParser.NETWORK);
                        this.state = 160;
                        this.match(CiscoIOSParser.IP_ADDR);
                        this.state = 161;
                        this.match(CiscoIOSParser.IP_ADDR);
                    }
                    break;
                case 28:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 162;
                        this.match(CiscoIOSParser.PASSIVE_INTERFACE);
                        this.state = 163;
                        this.match(CiscoIOSParser.INT_NAME);
                        this.state = 164;
                        this.match(CiscoIOSParser.INT_NUM);
                    }
                    break;
                case 29:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 165;
                        this.match(CiscoIOSParser.ROUTER_ID);
                        this.state = 166;
                        this.match(CiscoIOSParser.IP_ADDR);
                    }
                    break;
                default:
                    throw new antlr4_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    int_stmt() {
        let localctx = new Int_stmtContext(this, this._ctx, this.state);
        this.enterRule(localctx, 30, CiscoIOSParser.RULE_int_stmt);
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 169;
                this.match(CiscoIOSParser.INTERFACE);
                this.state = 170;
                this.match(CiscoIOSParser.INT_NAME);
                this.state = 171;
                this.match(CiscoIOSParser.INT_NUM);
                this.state = 175;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
                while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 172;
                                this.int_body();
                            }
                        }
                    }
                    this.state = 177;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 14, this._ctx);
                }
                this.state = 179;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 15, this._ctx)) {
                    case 1:
                        {
                            this.state = 178;
                            this.match(CiscoIOSParser.EXIT);
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    int_body() {
        let localctx = new Int_bodyContext(this, this._ctx, this.state);
        this.enterRule(localctx, 32, CiscoIOSParser.RULE_int_body);
        let _la;
        try {
            this.state = 195;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case 46:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 181;
                        this.match(CiscoIOSParser.NEWLINE);
                    }
                    break;
                case 6:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 182;
                        this.match(CiscoIOSParser.NO);
                        this.state = 183;
                        this.match(CiscoIOSParser.SHUT);
                    }
                    break;
                case 31:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 184;
                        this.match(CiscoIOSParser.SHUT);
                    }
                    break;
                case 43:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 185;
                        this.match(CiscoIOSParser.IP);
                        this.state = 186;
                        this.match(CiscoIOSParser.ADDR);
                        this.state = 187;
                        this.match(CiscoIOSParser.IP_ADDR);
                        this.state = 188;
                        this.match(CiscoIOSParser.IP_ADDR);
                    }
                    break;
                case 30:
                    this.enterOuterAlt(localctx, 5);
                    {
                        this.state = 189;
                        this.match(CiscoIOSParser.DESCRIPTION);
                        this.state = 191;
                        this._errHandler.sync(this);
